:pencil: update juli index mobile device

--- a/juli/index.html
+++ b/juli/index.html
@@ -5,6 +5,7 @@
         <meta content="True" name="HandheldFriendly">
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover"/>
         <title>聚力运动-摩托艇、快艇、飞鱼、香蕉船</title>
         <link rel="stylesheet" type="text/css" href="static/style.css" />
         <link rel="stylesheet" type="text/css" href="static/style.mobile.css" />
