--- a/juli/index.html
+++ b/juli/index.html
@@ -6,7 +6,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover"/>
-        <title>聚力运动-摩托艇、快艇、飞鱼、香蕉船</title>
+        <title>聚力运动 - 摩托艇、快艇、香蕉船、水上沙发、飞鱼、飞人</title>
         <link rel="stylesheet" type="text/css" href="static/style.css" />
         <link rel="stylesheet" type="text/css" href="static/style.mobile.css" />
     </head>
