:pencil: add juli nav app link

--- a/juli/index.html
+++ b/juli/index.html
@@ -29,8 +29,10 @@
                     <br />
                     <strong>地址</strong>：车坝一级水库水上人家旁
                     <br />
-                    <strong>地图导航</strong>：<a href="https://surl.amap.com/GCbxYu62FA">地图</a>
+                    <strong>地图导航</strong>：<a href="https://surl.amap.com/GCbxYu62FA">高德导航</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="https://j.map.baidu.com/1b/wTFc">百度导航</a>
                     <img class="map" src="https://cdn-1252212664.cos.ap-shanghai.myqcloud.com/juli/map.png" />
+
                 </p>
             </div>
             <div class="block">
