:pencil2: update juli add jingjiang

--- a/juli/index.html
+++ b/juli/index.html
@@ -20,19 +20,26 @@
             </div>
             <div class="desc">
                 <p>
-                    聚力运动位于市郊一级水库，远离喧嚣，风景秀丽，提供摩托艇、快艇、飞鱼、香蕉船、水上飞人、水上沙发等多种水上娱乐项目，适合于家庭出游、朋友聚会、公司团建。可现场教学，欢迎水上运动和极限运动的爱好者前来体验。
+                    聚力运动在清江画谷和市郊一级水库两地营运，远离喧嚣，风景秀丽，提供摩托艇、快艇、飞鱼、香蕉船、水上飞人、水上沙发等多种水上娱乐项目，适合于家庭出游、朋友聚会、公司团建。可现场教学，欢迎水上运动和极限运动的爱好者前来体验。
                 </p>
                 <p>
                     <strong>联系人</strong>：李经理
                     <br />
                     <strong>电话</strong>：<a href="tel:15972455588">159 7245 5588</a>
                     <br />
-                    <strong>地址</strong>：车坝一级水库水上人家旁
+                    <strong>清江画谷运营点</strong>：建始县景阳镇景江码头旁
+                    <br />
+                    <strong>周边景点</strong>：清江画谷、清江大峡谷景区、野三峡综合旅游区
+                    <br />
+                    <strong>地图导航</strong>：<a href="https://surl.amap.com/295qdI14eXy">高德导航</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="https://j.map.baidu.com/22/KOGd">百度导航</a>
+                    <img class="map" src="https://cdn-1252212664.cos.ap-shanghai.myqcloud.com/juli/jingjiang-map.png" />
+
+                    <strong>水库运营点</strong>：车坝一级水库水上人家旁
                     <br />
                     <strong>地图导航</strong>：<a href="https://surl.amap.com/GCbxYu62FA">高德导航</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="https://j.map.baidu.com/1b/wTFc">百度导航</a>
-                    <img class="map" src="https://cdn-1252212664.cos.ap-shanghai.myqcloud.com/juli/map.png" />
-
+                    <img class="map" src="https://cdn-1252212664.cos.ap-shanghai.myqcloud.com/juli/shuiku-map.png" />
                 </p>
             </div>
             <div class="block">
@@ -75,6 +82,11 @@
                     <li><strong>适合人数</strong>：1人</li>
                     <li><strong>收费标准</strong>：600元15分钟</li>
                 </div>
+            </div>
+            <div class="block">
+                <div class="block-title">清江画谷景区</div>
+                <img class="block-img" src="https://cdn-1252212664.cos.ap-shanghai.myqcloud.com/juli/jingjiang-view-1.jpg" />
+                <img class="block-img" src="https://cdn-1252212664.cos.ap-shanghai.myqcloud.com/juli/jingjiang-view-2.jpg" />
             </div>
         </div>
     </body>
