:pencil: update text in juli

--- a/juli/index.html
+++ b/juli/index.html
@@ -23,7 +23,7 @@
                     聚力运动在清江画谷和市郊一级水库两地营运，远离喧嚣，风景秀丽，提供摩托艇、快艇、飞鱼、香蕉船、水上飞人、水上沙发等多种水上娱乐项目，适合于家庭出游、朋友聚会、公司团建。可现场教学，欢迎水上运动和极限运动的爱好者前来体验。
                 </p>
                 <p>
-                    <strong>联系人</strong>：李经理
+                    <strong>联系人</strong>：李先生
                     <br />
                     <strong>电话</strong>：<a href="tel:15972455588">159 7245 5588</a>
                     <br />
